fix horizontal scroll bug

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -16,6 +16,7 @@ a, li, img {
 
 
 body {
+  overflow-x:hidden;
   background-color: #f2f2f2 !important;
   margin-top: 85px;
   padding-bottom: 60px;
